# autowired

./: .gitignore  COPYING.txt  MANIFEST.in  Pipfile  README.rst  constraints.txt  pyproject.toml  setup.cfg  tasks.py  tox.ini
autowired/: __init__.py  pyramid.py
tests/: test_errors.py  test_field_eager.py  test_field_lazy.py  test_init.py  test_lazy.py  test_lazy_errors.py  test_lazy_fromprop.py  test_lazy_named.py  test_preload.py  test_pyramid.py
